--- a/config.json
+++ b/config.json
@@ -9,8 +9,8 @@
 	"phish_server": {
 		"listen_url": "0.0.0.0:80",
 		"use_tls": false,
-		"cert_path": "example.crt",
-		"key_path": "example.key"
+		"cert_path": "fullchain.pem",
+		"key_path": "privkey.pem"
 	},
 	"db_name": "sqlite3",
 	"db_path": "gophish.db",
