--- a/config.json
+++ b/config.json
@@ -12,8 +12,8 @@
 		"cert_path": "fullchain.pem",
 		"key_path": "privkey.pem"
 	},
-	"db_name": "sqlite3",
-	"db_path": "gophish.db",
+	"db_name": "mysql",
+    "db_path": "gophish:sPgtL66hjPSpwgZRHvpT@tcp(db:3306)/gophish?charset=utf8&parseTime=True&loc=UTC",
 	"migrations_prefix": "db/db_",
 	"contact_address": "",
 	"logging": {
