--- a/config.json
+++ b/config.json
@@ -7,10 +7,10 @@
 		"trusted_origins": []
 	},
 	"phish_server": {
-		"listen_url": "0.0.0.0:80",
-		"use_tls": false,
-		"cert_path": "example.crt",
-		"key_path": "example.key"
+		"listen_url": "0.0.0.0:443",
+		"use_tls": true,
+		"cert_path": "fullchain.pem",
+		"key_path": "privkey.pem"
 	},
 	"db_name": "sqlite3",
 	"db_path": "gophish.db",
